iac/aks-deploy/manifests/controllers/portal.yaml
apiVersion: v1
kind: Service
metadata:
  name: observability-portal
  namespace: nginx
spec:
  selector:
    app: observability-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observability-portal
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: observability-portal
  template:
    metadata:
      labels:
        app: observability-portal
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: observability-portal-html
