iac/aks-deploy/manifests/controllers/services_proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-proxy
  namespace: nginx
spec:
  type: ExternalName
  externalName: airflow-web.airflow.svc.cluster.local
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-proxy
  namespace: nginx
spec:
  type: ExternalName
  externalName: dashboard-kubernetes.dashboard.svc.cluster.local
  ports:
    - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: nginx
spec:
  type: ExternalName
  externalName: grafana.prometheus.svc.cluster.local
  ports:
    - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-proxy
  namespace: nginx
spec:
  type: ExternalName
  externalName: kibana.elk.svc.cluster.local
  ports:
    - port: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: spark-history-proxy
  namespace: nginx
spec:
  type: ExternalName
  externalName: spark-history-server.spark-history.svc.cluster.local
  ports:
    - port: 18080
