iac/aks-deploy/manifests/controllers/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-portal
                port:
                  number: 80
          - path: /airflow
            pathType: Prefix
            backend:
              service:
                name: airflow-proxy
                port:
                  number: 8080
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: dashboard-proxy
                port:
                  number: 443
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-proxy
                port:
                  number: 3000
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana-proxy
                port:
                  number: 5601
          - path: /spark-history
            pathType: Prefix
            backend:
              service:
                name: spark-history-proxy
                port:
                  number: 18080
